xmonad/xmonad.errors
$ ghc --make xmonad.hs -i -ilib -fforce-recomp -main-is main -dynamic -v0 -outputdir /home/vivien/.xmonad/build-x86_64-linux -o /home/vivien/.xmonad/xmonad-x86_64-linux

xmonad.hs:12:1: error:
    • Couldn't match expected type: IO t0
                  with actual type: XConfig a0
    • When checking the type of the IO action ‘main’
   |
12 | main = xmonad desktopConfig
   | ^^^^

xmonad.hs:12:8: error:
    • Couldn't match expected type: XConfig a
                  with actual type: IO ()
    • In the first argument of ‘additionalKeys’, namely
        ‘xmonad
           desktopConfig {terminal = "xfce4-terminal", modMask = mod4Mask}’
      In the expression:
        xmonad
          desktopConfig {terminal = "xfce4-terminal", modMask = mod4Mask}
          `additionalKeys`
            [((mod, xK_e)
                spawn
                "emacsclient -nc --eval '(progn (doom/switch-to-scratch-buffer) (consult-buffer))'"),
             ((mod, xK_x)
                spawn "emacsclient -nc --eval '(doom/switch-to-scratch-buffer)'"),
             ((mod, xK_v) spawn "~/bin/vivaldi"),
             ((mod, xK_Return) spawn terminal), ....]
      In an equation for ‘main’:
          main
            = xmonad
                desktopConfig {terminal = "xfce4-terminal", modMask = mod4Mask}
                `additionalKeys`
                  [((mod, xK_e)
                      spawn
                      "emacsclient -nc --eval '(progn (doom/switch-to-scratch-buffer) (consult-buffer))'"),
                   ((mod, xK_x)
                      spawn "emacsclient -nc --eval '(doom/switch-to-scratch-buffer)'"),
                   ((mod, xK_v) spawn "~/bin/vivaldi"), ....]
            where
                mod = modMask myConfig
    • Relevant bindings include
        main :: XConfig a (bound at xmonad.hs:12:1)
   |
12 | main = xmonad desktopConfig
   |        ^^^^^^^^^^^^^^^^^^^^...

xmonad.hs:17:7: error:
    • Couldn't match expected type: (String -> m0 ())
                                    -> String -> ((KeyMask, KeySym), X ())
                  with actual type: (KeyMask, KeySym)
    • The function ‘(mod, xK_e)’ is applied to two value arguments,
        but its type ‘(KeyMask, KeySym)’ has none
      In the expression:
        (mod, xK_e)
          spawn
          "emacsclient -nc --eval '(progn (doom/switch-to-scratch-buffer) (consult-buffer))'"
      In the second argument of ‘additionalKeys’, namely
        ‘[((mod, xK_e)
             spawn
             "emacsclient -nc --eval '(progn (doom/switch-to-scratch-buffer) (consult-buffer))'"),
          ((mod, xK_x)
             spawn "emacsclient -nc --eval '(doom/switch-to-scratch-buffer)'"),
          ((mod, xK_v) spawn "~/bin/vivaldi"),
          ((mod, xK_Return) spawn terminal), ....]’
   |
17 |     [((mod, xK_e) spawn "emacsclient -nc --eval '(progn (doom/switch-to-scratch-buffer) (consult-buffer))'"),
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:18:7: error:
    • Couldn't match expected type: (String -> m1 ())
                                    -> String -> ((KeyMask, KeySym), X ())
                  with actual type: (KeyMask, KeySym)
    • The function ‘(mod, xK_x)’ is applied to two value arguments,
        but its type ‘(KeyMask, KeySym)’ has none
      In the expression:
        (mod, xK_x)
          spawn "emacsclient -nc --eval '(doom/switch-to-scratch-buffer)'"
      In the second argument of ‘additionalKeys’, namely
        ‘[((mod, xK_e)
             spawn
             "emacsclient -nc --eval '(progn (doom/switch-to-scratch-buffer) (consult-buffer))'"),
          ((mod, xK_x)
             spawn "emacsclient -nc --eval '(doom/switch-to-scratch-buffer)'"),
          ((mod, xK_v) spawn "~/bin/vivaldi"),
          ((mod, xK_Return) spawn terminal), ....]’
   |
18 |      ((mod, xK_x) spawn "emacsclient -nc --eval '(doom/switch-to-scratch-buffer)'"),
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:19:7: error:
    • Couldn't match expected type: (String -> m2 ())
                                    -> String -> ((KeyMask, KeySym), X ())
                  with actual type: (KeyMask, KeySym)
    • The function ‘(mod, xK_v)’ is applied to two value arguments,
        but its type ‘(KeyMask, KeySym)’ has none
      In the expression: (mod, xK_v) spawn "~/bin/vivaldi"
      In the second argument of ‘additionalKeys’, namely
        ‘[((mod, xK_e)
             spawn
             "emacsclient -nc --eval '(progn (doom/switch-to-scratch-buffer) (consult-buffer))'"),
          ((mod, xK_x)
             spawn "emacsclient -nc --eval '(doom/switch-to-scratch-buffer)'"),
          ((mod, xK_v) spawn "~/bin/vivaldi"),
          ((mod, xK_Return) spawn terminal), ....]’
   |
19 |      ((mod, xK_v) spawn "~/bin/vivaldi"),
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:20:7: error:
    • Couldn't match expected type: (String -> m3 ())
                                    -> (XConfig l0 -> String) -> ((KeyMask, KeySym), X ())
                  with actual type: (KeyMask, KeySym)
    • The function ‘(mod, xK_Return)’
      is applied to two value arguments,
        but its type ‘(KeyMask, KeySym)’ has none
      In the expression: (mod, xK_Return) spawn terminal
      In the second argument of ‘additionalKeys’, namely
        ‘[((mod, xK_e)
             spawn
             "emacsclient -nc --eval '(progn (doom/switch-to-scratch-buffer) (consult-buffer))'"),
          ((mod, xK_x)
             spawn "emacsclient -nc --eval '(doom/switch-to-scratch-buffer)'"),
          ((mod, xK_v) spawn "~/bin/vivaldi"),
          ((mod, xK_Return) spawn terminal), ....]’
   |
20 |      ((mod, xK_Return) spawn terminal),
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:21:7: error:
    • Couldn't match expected type: (String -> m4 ())
                                    -> String -> ((KeyMask, KeySym), X ())
                  with actual type: (KeyMask, KeySym)
    • The function ‘(mod, xK_d)’ is applied to two value arguments,
        but its type ‘(KeyMask, KeySym)’ has none
      In the expression: (mod, xK_d) spawn "ulauncher-toggle"
      In the second argument of ‘additionalKeys’, namely
        ‘[((mod, xK_e)
             spawn
             "emacsclient -nc --eval '(progn (doom/switch-to-scratch-buffer) (consult-buffer))'"),
          ((mod, xK_x)
             spawn "emacsclient -nc --eval '(doom/switch-to-scratch-buffer)'"),
          ((mod, xK_v) spawn "~/bin/vivaldi"),
          ((mod, xK_Return) spawn terminal), ....]’
   |
21 |      ((mod, xK_d) spawn "ulauncher-toggle")
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:23:26: error:
    • Variable not in scope: myConfig :: XConfig l1
    • Perhaps you meant data constructor ‘XConfig’ (imported from XMonad)
   |
23 |      where mod = modMask myConfig
   |                          ^^^^^^^^
